fixing issue with legal pages looking weird on mobile

--- a/src/css/business.css
+++ b/src/css/business.css
@@ -323,6 +323,9 @@ footer {
   transform: translateX(-50%);
   background-color: white;
 }
+.main-navigation.-legal {
+  background-color: transparent;
+}
 .main-navigation .main-navigation__container {
   padding: 44px 15px 0;
 }
