--- a/webapp/business/static/css/business.css
+++ b/webapp/business/static/css/business.css
@@ -325,6 +325,9 @@ footer {
   transform: translateX(-50%);
   background-color: white;
 }
+.main-navigation.-legal {
+  background-color: transparent;
+}
 .main-navigation .main-navigation__container {
   padding: 44px 15px 0;
 }
