--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -330,6 +330,9 @@ section, nav {
   transform: translateX(-50%);
   background-color: white;
 }
+.main-navigation.-legal {
+  background-color: transparent;
+}
 .main-navigation .main-navigation__container {
   padding: 44px 15px 0;
 }
